suricata: fix display of title
Font size was too big and some text was useless.

--- a/rules/static/rules/static.css
+++ b/rules/static/rules/static.css
@@ -174,3 +174,8 @@ div#menu {
     height: 34px;
     width: 910px;
 }
+
+h2 {
+    font-size: 1.5em;
+    font-weight: bold;
+}
